--- a/server/py4web/apps/vidjil/templates/sample_set/index.html
+++ b/server/py4web/apps/vidjil/templates/sample_set/index.html
@@ -191,12 +191,13 @@
                     [[pass]]
 
                     [[if row.results_file.id:]]
+                        <td id="status_[[=row.sequence_file.id]]_[[=config_id]]"
                         [[if row.sequence_file.pre_process_flag in ["RUN", "WAIT"] :]]
-                            <td> PREPROCESSING </td>
+                            > PREPROCESSING
                         [[ else:]]
-                            <td class="button" onclick="db.call('results_file/info', { 'results_file_id' : '[[=row.results_file.id]]' } )"> [[=status]] </td>
+                            class="button" onclick="db.call('results_file/info', { 'results_file_id' : '[[=row.results_file.id]]' } )"> [[=status]]
                         [[ pass]]
-
+                         </td>
                      <td>
                         [[if row.results_file.data_file:]]
                             <a href=[[=URL('default', 'download', row.results_file.data_file, scheme='https', vars=dict(filename='result-%s-%s.txt' % (request.query['id'], row.results_file.id)))]]
@@ -210,12 +211,12 @@
                      <td></td>
                     [[pass]]
                    [[else:]]
-                     <td></td><td></td><td></td><td></td>
+                     <td id="status_[[=row.sequence_file.id]]_[[=config_id]]"></td><td></td><td></td><td></td>
                    [[pass]]
                    <td>
                    [[if row.sequence_file.data_file != None and ( row.results_file.id != None or ( status not in ["RUNNING", "QUEUED", "ASSIGNED"]) ) and (not has_pre_process or (row.sequence_file.pre_process_flag != None and row.sequence_file.pre_process_flag != "FAILED")) :]]
                        [[if auth.can_process_sample_set(int(request.query['id'])) and (config_id > 0 and auth.can_use_config(config_id)) :]]
-                           <span class="pointer" onclick="db.call('default/run_request', { 'sequence_file_id' : '[[=row.sequence_file.id]]', 'sample_set_id' : [[=request.query["id"]]], 'config_id' : [[=config_id]] } )"><i class="icon-cog-2" title="Run a process with the selected configuration for this file"></i></span>
+                           <span class="pointer" id="launch_[[=row.sequence_file.id]]_[[=config_id]]"  onclick="db.call('default/run_request', { 'sequence_file_id' : '[[=row.sequence_file.id]]', 'sample_set_id' : [[=request.query["id"]]], 'config_id' : [[=config_id]] } )"><i class="icon-cog-2" title="Run a process with the selected configuration for this file"></i></span>
                        [[pass]]
                    [[pass]]
                    </td>
