--- a/server/py4web/apps/vidjil/templates/sample_set/index.html
+++ b/server/py4web/apps/vidjil/templates/sample_set/index.html
@@ -9,8 +9,10 @@
     <i class="icon-left-open-1" title="previous" onclick="db.call('sample_set/index', {'next': '1', 'id' :'[[=request.query['id']]]', 'config_id' : '[[=config_id]]'})"></i>
     <i class="icon-right-open-1" title="next" onclick="db.call('sample_set/index', {'next': '-1', 'id' :'[[=request.query['id']]]', 'config_id' : '[[=config_id]]'})"></i>
        <span class="uid">[[=request.query['id']]]</span> [[=info["name"]]]
+        [[ for owner in owners: ]]
+            <span class="owner" style="display:none;">[[=owner['auth_group.role']]]</span>
+        [[pass]]
     </h3>
-
         
         
     <div class="db_block">
