#5078 use py4web impersonation

--- a/server/py4web/apps/vidjil/templates/db_layout.html
+++ b/server/py4web/apps/vidjil/templates/db_layout.html
@@ -34,7 +34,7 @@
                                 </option> [[pass]]
                         </select>
                         <icon class="icon-cancel-squared" id="desimpersonate_btn" type="button" class="btn btn-navbar"
-                         onclick="db.call('default/impersonate', {'id' : '0', 'next': '[[=request.url]]'});"/>
+                         onclick="db.call('default/stop_impersonate', {'next': '[[=request.url]]'});"/>
                     </span>[[pass]]
         
         
