--- a/server/py4web/apps/vidjil/templates/pre_process/info.html
+++ b/server/py4web/apps/vidjil/templates/pre_process/info.html
@@ -4,10 +4,7 @@
 [[if 'message' in globals():]]
 
 [[
-sequence_file_id = request.query["sequence_file_id"]
-sequence_file = db.sequence_file[sequence_file_id]
 
-run = db(db.scheduler_run.task_id == sequence_file.pre_process_scheduler_task_id).select(orderby=~db.scheduler_run.stop_time).first()
 
 ]]
 
@@ -41,16 +38,12 @@ run = db(db.scheduler_run.task_id == sequence_file.pre_process_scheduler_task_id
            <td>[[=run.stop_time]]</td>
        </tr>
     </table>
-    <table class='log'>
-       <tr><td>result : <b>[[if run.run_result:]][[=run.run_result.replace('\r', '')]][[pass]]</b>
-       </textarea></td></tr>
-       <tr><td>output :</td></tr>
-       <tr><td><textarea class="text" rows="25">[[if run.run_output:]][[=run.run_output.replace('\r', '')]][[pass]]
-       </textarea></td></tr>
-       <tr><td>traceback :</td></tr>
-       <tr><td><textarea class="text" rows="10">[[if run.traceback:]][[=run.traceback.replace('\r', '')]][[pass]]
-       </textarea></td></tr>
-    </table>
+
+    [[ if content_log: ]]
+        <pre style="height:calc(90%); width:calc(90%); overflow-y:scroll; overflow-x:scroll; background-color:gray; color:white;">[[=content_log]]</pre>
+    [[ else:]]
+        <b>No log to show<b>
+    [[ pass]]
 </div>
 [[pass]]
 
