--- a/server/py4web/apps/vidjil/templates/sample_set/index.html
+++ b/server/py4web/apps/vidjil/templates/sample_set/index.html
@@ -226,7 +226,7 @@
                    </td>
                    
                     [[if row.results_file.id and row.results_file.data_file:]]
-                    <td><a class="button" href="[[=http_origin]]?custom=[[=row.results_file.id]]&sample_set_id=[[=request.query["id"]]]&config=[[=config_id]]" type="text/html"
+                    <td><a id="open_sample_result_[[=row.sequence_file.id]]" class="button" href="[[=http_origin]]?custom=[[=row.results_file.id]]&sample_set_id=[[=request.query["id"]]]&config=[[=config_id]]" type="text/html"
                                 onclick= "event.preventDefault();
                                         if( event.which == 2 ) { window.open(this.href); }
                                         else { myUrl.loadCustomUrl(db, {'custom': '[[=row.results_file.id]]', 'sample_set_id' : [[=request.query["id"]]], 'config' : [[=config_id]]  } ); } " >
